# googlepinyinime-rev

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  dictbuilder.cpp  dictlist.cpp  dicttrie.cpp  lpicache.cpp  main.cpp  maintest.cpp  matrixsearch.cpp  ngram.cpp  pinyinime.cpp  searchutility.cpp  spellingtable.cpp  spellingtrie.cpp  splparser.cpp  sync.cpp  userdict.cpp  utf16char.cpp  utf16reader.cpp  vcpkg.json
command/: CMakeLists.txt  pinyinime_dictbuilder.cpp
command/scripts/: lcompile.sh
scripts/: lcompile.ps1  llaunch.ps1  llaunch.sh  lrun.ps1  lrun.sh  prepare_env.py
scripts/config_files/: .clangd  CMakeLists.txt  CMakePresets.json
src/include/: atomdictbase.h  dictbuilder.h  dictdef.h  dictlist.h  dicttrie.h  lpicache.h  matrixsearch.h  mystdlib.h  ngram.h  pinyinime.h  searchutility.h  spellingtable.h  spellingtrie.h  splparser.h  sync.h  userdict.h  utf16char.h  utf16reader.h
src/share/: dictbuilder.cpp  dictlist.cpp  dicttrie.cpp  lpicache.cpp  matrixsearch.cpp  mystdlib.cpp  ngram.cpp  pinyinime.cpp  searchutility.cpp  spellingtable.cpp  spellingtrie.cpp  splparser.cpp  sync.cpp  userdict.cpp  utf16char.cpp  utf16reader.cpp
tests/: main.cpp
